@@ -1,5 +1,9 @@
 2025-09-03  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.3.5-alpha03 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha03: Bodkin';git push
+	git tag -a 5.3.5-alpha03 -m 'all: ';git push --tags
+
 	* NCO 5.3.5-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha02: Iron Champs 2nd Place';git push
 	git tag -a 5.3.5-alpha02 -m 'all: zfp flt stubs; ncks: plev/prs_3d in xtr fl; ncremap/ncclimo npo refactor';git push --tags
